# Roberto

./: .gitignore  .gitmodules  README.md  RobertoDriver.ino  commands.ino
ArdPiComm/: ArdPiComm.cpp  keywords.txt
ArdPiComm/examples/test/: test.ino
ArmController/: ArmController.cpp  ArmController.h
ArmController/examples/test/: test.ino
Motor/: Motor.h
Motor/examples/SingleTest/: SingleTest.ino
RobotBase/: RobotBase.cpp
arduino/lib/: install_libraries
arduino/lib/ArdPiComm/: ArdPiComm.cpp  ArdPiComm.h  ArdPiParser.cpp  ArdPiParser.h
arduino/lib/ArdPiComm/examples/ack_response_test/: ack_response_test.ino
arduino/lib/ArdPiComm/examples/bidirectional_test/: bidirectional_test.ino
arduino/lib/ArdPiComm/examples/full_parser_test/: full_parser_test.ino
arduino/lib/ArdPiComm/examples/parser_test/: parser_test.ino
arduino/lib/ArdPiComm/examples/send_speed_test/: send_speed_test.ino
arduino/lib/ArdPiComm/examples/send_test/: send_test.ino
arduino/lib/ArdPiComm/examples/serialization_test/: serialization_test.ino
arduino/lib/ArdPiComm/examples/test/: test.ino
arduino/lib/Encoder/: Encoder.cpp  Encoder.h
arduino/lib/HMC5883L/: HMC5883L.h
arduino/lib/HMC6352/examples/read_mem/: read_mem.ino
arduino/lib/HMC6352/examples/test/: test.ino
arduino/lib/I2Cdev/: README.md
arduino/lib/MPU6050/: README.md
arduino/lib/Motor/: Motor.cpp  keywords.txt
arduino/lib/Motor/examples/: DualSpeedTest.ino
arduino/lib/Motor/examples/DualSpeedTest/: DualSpeedTest.ino
arduino/lib/RobotBase/examples/movement_test/: movement_test.ino
arduino/lib/RobotBase/examples/speed_test/: speed_test.ino
arduino/src/ArmTeleopModule/: README.md  TeleopModule.ino  commands.ino
arduino/src/TeleopModule/: README.md  TeleopModule.ino
arduino/tests/EncoderTest/: EncoderTest.ino
arduino/tests/MPU6050_test/: MPU6050_test.ino
lib/ArmController/: keywords.txt
lib/HMC5883L/: HMC5883L.cpp  HMC5883L.h
lib/HMC5883L/examples/test/: test.ino
lib/HMC6352/: HMC6352.cpp  keywords.txt
lib/Motor/examples/SpeedTest/: SpeedTest.ino
lib/RobotBase/examples/test/: test.ino
lib/arduino/ArdPiComm/: ArdPiComm.h
lib/arduino/ArmController/: ArmController.h
lib/arduino/HMC6352/: HMC6352.h
lib/arduino/HMC6352/examples/calibration/: calibration.ino
lib/arduino/Motor/examples/DualTest/: DualTest.ino
lib/arduino/RobotBase/: RobotBase.h  keywords.txt
master/src/roberto_teleop/: CMakeLists.txt  package.xml  setup.py
master/src/roberto_teleop/launch/: xbox360_teleop.launch
master/src/roberto_teleop/src/: nunchuck_teleop.py  xbox360_teleop.cpp
master/src/roberto_teleop/src/nunchuck_driver/: __init__.py  nunchuck_driver.py  nunchuck_limits.py
rpi/lib/: driver_comm.py
rpi/modules/TeleopModule/: interface.py  master_comm.py
rpi/src/TeleopModule/: interface.py
rpi/src/picamera_driver/: CMakeLists.txt  package.xml
rpi/src/picamera_driver/launch/: picamera_driver.launch
rpi/src/picamera_driver/src/: picamera_driver.cpp
rpi/src/roberto_driver/: CMakeLists.txt  package.xml  setup.py
rpi/src/roberto_driver/src/: driver.py
rpi/src/roberto_driver/src/roberto_driver/: __init__.py  driver_comm.py  parser.py  parser_test.py  serialize_test.py
src/TeleopModule/: TeleopModule.ino
